# Transmittance

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: camera.h  imgui_style.h  model.h  shaders.h
shaders/: main.frag  skybox.frag  skybox.vert
src/: main.cpp
